FIX Add better button border colours and adjust caret alignment to be centered
This matches the designs more closely

--- a/client/src/components/Toolbar/Toolbar.scss
+++ b/client/src/components/Toolbar/Toolbar.scss
@@ -26,7 +26,8 @@
   }
 
   .circular-group > .btn {
-    width: 32px;
+    border: 1px solid $border-color;
+    width: 30px;
     padding-left: 7px;
 
     &:first-child {
@@ -37,6 +38,11 @@
     &:last-child {
       border-top-right-radius: 100px;
       border-bottom-right-radius: 100px;
+      padding-left: 5px;
+    }
+
+    &:hover {
+      border: 1px solid $border-color;
     }
   }
 }
